# zylora

./: .dockerignore  .env.example  .env.production.example  .gitignore  LAUNCH_BLOCKERS_RESOLUTION.md  LICENSE  MIGRATION_REPORT.md  Makefile  PATCH_SUMMARY.md  PRODUCTION_HARDENING_REPORT.md  README.md  RECURRING_BILLING_EXPORT_REPORT.md  SUPER_ADMIN_PORTFOLIO_REPORT.md  VERIFICATION_REPORT.md  apply-fix.sh  docker-compose.prod.yml  docker-compose.secure.yml  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: access.py  admin_clients.py  analytics.py  assets.py  audit.py  auth.py  billing.py  changes.py  chatbot.py  credits.py  dashboard.py  documents.py  domains.py  exports.py  health.py  internal.py  invoices.py  leads.py  metrics.py  notifications.py  payments.py  portal.py  publishing.py  router.py  seo.py  sites.py  tenants.py  webhooks.py
apps/api/app/core/: alerts.py  config.py  encryption.py  exceptions.py  logging.py  middleware.py  security.py  serialization.py
apps/api/app/db/: readiness.py  seed.py  session.py
apps/api/app/db/models/: __init__.py  entities.py  enums.py
apps/api/app/modules/admin_clients/: service.py
apps/api/app/modules/ai_gateway/: service.py
apps/api/app/modules/audit/: service.py
apps/api/app/modules/billing/: service.py
apps/api/app/modules/credits/: schemas.py  service.py
apps/api/app/modules/documents/: service.py
apps/api/app/modules/email/: service.py
apps/api/app/modules/leads/: schemas.py
apps/api/app/modules/notifications/: service.py
apps/api/app/modules/payments/: service.py
apps/api/app/modules/publishing/: service.py
apps/api/app/modules/reports/: pdf.py
apps/api/app/modules/sites/: defaults.py  schemas.py  validation.py
apps/api/app/modules/tenants/: schemas.py
apps/api/app/modules/webhooks/: service.py
apps/api/app/modules/whatsapp/: service.py
apps/api/migrations/: env.py  tenant_isolation.sql
apps/api/migrations/versions/: 07d641d8e2ec_explicit_production_schema.py  20260716_0001_complete_schema.py  20260717_0002_enable_rls.py  20260717_0003_recurring_billing_exports.py  20260717_0004_super_admin_operations.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_end_to_end.py  test_operational_modules.py  test_recurring_billing_and_export.py  test_super_admin_portfolio.py
apps/api/tests/security/: test_auth.py  test_cross_tenant_authorization.py  test_tenant_guard.py
apps/api/tests/unit/: test_credit_conversion.py  test_production_settings.py  test_production_tls.py  test_rag.py  test_secret_masking.py  test_seo_audit.py  test_storage_security.py  test_webhook_signature.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/app/: api.py  config.py  main.py
apps/worker/app/jobs/: billing.py  document_extraction.py  domain_reminders.py  maintenance.py  seo_audits.py  whatsapp_notifications.py
backend/: requirements.txt
docs/: README.md  analytics.md  api.md  apply.sh  architecture.md  authentication.md  backup-and-restore.md  chatbot.md  client-export.md  client-onboarding.md  credits-and-whatsapp.md  database.md  deployment.md  disaster-recovery.md  domain-renewal.md  domain-setup.md  domains.md  external-provider-setup.md  landing-page-settings.md  launch-readiness.md  leads.md  manual-provider-actions.md  monitoring.md  payments.md  permissions.md  production-readiness.md  publishing.md  recurring-billing.md  seo.md  (+6 more)
(+147 files in other folders)
