[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zylora-api"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "cryptography>=43",
  "httpx>=0.27",
  "redis>=5.0",
  "celery>=5.4",
  "python-multipart>=0.0.12",
  "email-validator>=2.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
