[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zylora-api"
version = "2.1.0"
requires-python = ">=3.11"
dependencies = [
  "zylora-ai>=2.0.0",
  "boto3>=1.38,<2.0",
  "reportlab>=4.4,<5.0",
  "pypdf>=5.7,<6.0",
  "fastapi>=0.116,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "sqlalchemy>=2.0.40,<3.0",
  "psycopg[binary]>=3.2.9,<4.0",
  "alembic>=1.16,<2.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "PyJWT[crypto]>=2.10,<3.0",
  "cryptography>=45,<46",
  "httpx>=0.28,<1.0",
  "redis>=6,<7",
  "celery>=5.5,<6.0",
  "python-multipart>=0.0.20,<1.0",
  "email-validator>=2.2,<3.0",
  "slowapi>=0.1.9,<1.0",
  "python-json-logger>=3.3,<4.0",
  "prometheus-client>=0.22,<1.0",
  "sentry-sdk[fastapi]>=2.30,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.0,<2.0",
  "pytest-cov>=6.2,<7.0",
  "ruff>=0.12,<1.0",
  "mypy>=1.16,<2.0",
  "types-redis>=4.6,<5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --strict-markers --disable-warnings --cov=app --cov-report=term-missing --cov-fail-under=65"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["migrations/versions", "legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations", "legacy"]
