[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zylora-worker"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
  "celery>=5.4",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "pydantic-settings>=2.5"
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
