[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zylora-worker"
version = "2.1.0"
requires-python = ">=3.11"
dependencies = [
  "celery>=5.5,<6.0",
  "redis>=6,<7",
  "sqlalchemy>=2.0.40,<3.0",
  "psycopg[binary]>=3.2.9,<4.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "python-json-logger>=3.3,<4.0",
  "sentry-sdk>=2.30,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "ruff>=0.12,<1.0",
  "mypy>=1.16,<2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
